--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -174,6 +174,7 @@ body {margin:0;font-family:Arial}
 	margin-left: 600px;
 	margin-top: -290px;
 	line-height: 1.5;
+	text-align: justify;
 }
 
 .ProjectScope figcaption {
@@ -183,12 +184,25 @@ body {margin:0;font-family:Arial}
 
 .ResearchGap {
 	line-height: 1.5;
+	text-align: justify;
 }
 
 .ResearchProblem {
 	line-height: 1.5;
+	text-align: justify;
 }
 
 .ResearchObjective {
 	line-height: 1.5;
+	text-align: justify;
+}
+
+.RPContent {
+	width: 50%;
+}
+
+.Demo {
+	width:600px;
+	margin-left: 700px;
+	margin-top: -619px;
 }
