--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -211,3 +211,19 @@ body {margin:0;font-family:Arial}
 	line-height: 1.5;
 	text-align: justify;
 }
+
+.video-title {
+    position: absolute;
+    width: 23%;
+    color: white;
+    padding: 10px;
+    text-align: center;
+    opacity: 0;
+    transition: opacity 0.3s;
+	margin-top:-365px;
+	margin-left: 0px;
+}
+
+.Demo:hover .video-title {
+    opacity: 1;
+}
