--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -231,3 +231,21 @@ body {margin:0;font-family:Arial}
 .OptiFig {
 	margin-left: -250px;
 }
+
+.Technologies {
+		display: flex;
+}
+
+.TechImages {
+    width: 130px; /* Set the desired width and height for the circular frame */
+    height: 130px;
+    border-radius: 50%; /* Create a circular shape with 50% border-radius */
+    overflow: hidden; /* Hide any parts of the image that exceed the circular frame */
+	margin-right:50px;
+}
+
+.TechImages img {
+    width: 100%; /* Make the image fill the circular frame */
+    height: 100%;
+    object-fit: cover; /* Maintain aspect ratio and cover the circular frame */
+}
