--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -270,13 +270,13 @@ body {margin:0;font-family:Arial}
   border-left: 3px solid #b565a7;
   border-bottom-right-radius: 4px;
   border-top-right-radius: 4px;
-  background: rgba(177, 99, 163, 0.09);
+  background: #e6ffff;
   margin: 0 auto;
   position: relative;
   padding: 50px;
   list-style: none;
   text-align: left;
-  max-width: 40%;
+  max-width: 45%;
 }
 
 @media (max-width: 767px) {
