--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -353,3 +353,7 @@ body {margin:0;font-family:Arial}
     border: 1px solid #000; /* Add a border around the progress bar */
 }
 
+.img-fluid {
+  max-width: 100%;
+  height: auto;
+}
