--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -39,6 +39,7 @@ body {margin:0;font-family:Arial}
   background-color: inherit;
   font-family: inherit;
   margin: 0;
+  cursor: pointer;
 }
 
 .dropdown-content {
