Fixed an error in navigation bar

--- a/Styles/bootstrap/bootstrap.min_1.css
+++ b/Styles/bootstrap/bootstrap.min_1.css
@@ -31,7 +31,9 @@
     --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0))
 }
 
-
+*,::after,::before {
+    box-sizing: border-box
+}
 
 @media (prefers-reduced-motion:no-preference) {
     :root {
@@ -285,19 +287,24 @@ label {
     display: inline-block
 }
 
-
+button {
+    border-radius: 0
+}
 
 button:focus:not(:focus-visible) {
     outline: 0
 }
 
-input,optgroup,select,textarea {
+button,input,optgroup,select,textarea {
     margin: 0;
     font-family: inherit;
     font-size: inherit;
     line-height: inherit
 }
 
+button,select {
+    text-transform: none
+}
 
 [role=button] {
     cursor: pointer
@@ -315,6 +322,13 @@ select:disabled {
     display: none
 }
 
+[type=button],[type=reset],[type=submit],button {
+    -webkit-appearance: button
+}
+
+[type=button]:not(:disabled),[type=reset]:not(:disabled),[type=submit]:not(:disabled),button:not(:disabled) {
+    cursor: pointer
+}
 
 ::-moz-focus-inner {
     padding: 0;
@@ -3485,7 +3499,6 @@ textarea.form-control-lg {
         transition: none
     }
 }
-
 
 
 .dropdown-toggle {
