--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -118,7 +118,7 @@ body {margin:0;font-family:Arial}
 	margin-top: 10px;
 }
 
-.maintitle {
+.home {
 	display: block;
 	padding-top: 50px;
 }
@@ -144,8 +144,8 @@ body {margin:0;font-family:Arial}
 
 .arrow {
     position: absolute;
-    right: 690px; /* Adjust the position of the arrow as needed */
-    top: 272px;
+    right: 45%; /* Adjust the position of the arrow as needed */
+    top: 52%;
     transform: translateY(-50%);
     opacity: 0; /* Initially hidden */
     transition: opacity 0.3s; /* Add a smooth transition effect */
