--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -370,6 +370,12 @@ body {margin:0;font-family:Arial}
 }
 
 .pdf-logo {
-  display: inline-block;
-  margin-right: 10px;
+  /*display: inline-block;*/
+  /*margin-right: 10px;*/
+  padding: 10px;
+}
+
+.card-content {
+	flex: 1;
+	padding: 10px;
 }
