--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -378,9 +378,9 @@ body {margin:0;font-family:Arial}
 
 .card-content {
 	flex: 1;
-	padding: 10px;
+	/*padding: 10px;*/
 	width: 50%;
 	/*background: blue;*/
-	margin-left: 6%;
-	margin-top: -45px; 
+	margin-left: 10%;
+	margin-top: -32px; 
 }
