--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -105,7 +105,7 @@ body {margin:0;font-family:Arial}
   }
 }
 
-@media screen and (max-width: 2000px){
+@media screen and (min-width: 0px) and (max-width: 2000px){
 	.navcontent {
 		float: right;
 		margin-top: -100px;
