Aboutus section completed

--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -409,5 +409,21 @@ a {
 }
 
 .cosupervisor {
-	width: 21%
+	width: 21%;
+}
+
+.udithayya {
+	width: 21%;
+}
+
+.ihshan {
+	width: 21%;
+}
+
+.binura {
+	width: 21%;
+}
+
+.murfidh {
+	width: 21%;
 }
