--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -427,3 +427,24 @@ a {
 .murfidh {
 	width: 21%;
 }
+
+.contactus {
+	margin-left: 105px;
+	margin-right: 105px;
+	margin-top: 30px;
+}
+
+.CU {
+	color: #33ccff;
+}
+
+.form-control {
+	width: 50%;
+}
+
+.btncolorgradient {
+    background-size: 200%;
+    background-image: linear-gradient(to left, #52BE80, #196F3D, #52BE80);
+	width: 52%;
+	color:white;
+}
