--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -1,5 +1,9 @@
 body {margin:0;font-family:Arial}
 
+* {
+	scroll-behavior: smooth;
+}
+
 .topnav {
   overflow: hidden;
   background-color: white; /*navigation bar background colour #8D8988*/
