--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -460,7 +460,7 @@ a {
 
 /* Add this CSS to your existing styles */
 .topnav a.active {
-  background-color: black;
+  background-color: #33ccff;
   color: white;
 }
 
